# theory-of-programming-languages

./: 190326.txt  CMakeLists.txt  README.md
CYK/: CMakeLists.txt  CYKValidator.cpp  CYKValidator.h  ChomskyNormalForm.h  EpsilonEliminator.h  Grammar.h  GrammarParser.h  README.md  UnitRuleEliminator.h  UselessSymbolEliminator.h  Utils.h  input.txt  main.cpp  program.txt
CYK/Algorithms/: ChainRuleEliminator.cpp  ChainRuleEliminator.h  EpsilonEliminator.cpp  EpsilonEliminator.h  GrammarNormalizer.cpp  GrammarNormalizer.h  IGrammarTransformer.h  TransformationPipeline.cpp  TransformationPipeline.h  UselessSymbolEliminator.cpp  UselessSymbolEliminator.h
CYK/CNF/: ChomskyNormalForm.cpp  ChomskyNormalForm.h
CYK/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h  NullLogger.cpp  NullLogger.h
CYK/Logger/Printer/: CYKTablePrinter.cpp  CYKTablePrinter.h  GrammarPrinter.cpp  GrammarPrinter.h
CYK/Parser/: GrammarParser.cpp  GrammarParser.h
CYK/Types/: Grammar.cpp  Grammar.h  Production.cpp  Production.h  Symbol.cpp  Symbol.h
CYK/tasks/: ex2.txt  ex3.txt  ex5.txt  ex6.txt  ex7_2.txt  ll1.txt  new1.txt  new2.txt  new3.txt  new4.txt  new5.txt  new6.txt  new7.txt  new8.txt  new9.txt  priv1.txt  priv2.txt  text.txt
CYK/tests/: CYKValidator.cpp  ChainRuleEliminatorTest.cpp  ChomskyNormalFormTest.cpp  EpsilonEliminatorTest.cpp  GrammarParserTest.cpp  UselessSymbolEliminatorTest.cpp  Utils.h  program.txt
grammar-parser/: CMakeLists.txt
grammar-parser/grammar/: Grammar.cpp  Grammar.h  Production.cpp  Production.h  Symbol.cpp  Symbol.h
grammar-parser/parser/: GrammarParser.cpp  GrammarParser.h
grammar-parser/printer/: GrammarPrinter.cpp  GrammarPrinter.h
grammar-parser/tests/: GrammarParserTest.cpp  GrammarPrinterTest.cpp
grammar-simplifier/: CMakeLists.txt  ChainRuleEliminator.cpp  ChainRuleEliminator.h  EpsilonEliminator.cpp  EpsilonEliminator.h  GrammarFactorizer.cpp  GrammarFactorizer.h  LeftRecursionEliminator.cpp  LeftRecursionEliminator.h  UselessSymbolEliminator.cpp  UselessSymbolEliminator.h  main.cpp
grammar-simplifier/tests/: EpsilonEliminatorTest.cpp  GrammarSimplifierTest.cpp
grammar-simplifier/tests/LL1_test/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt
grammar-simplifier/tests/chain-rule-eliminator-data/input/: 01-simple-chain-in.txt  02-transitive-in.txt  03-mixed-alternatives-in.txt  04-cycle-in.txt  05-complex-rhs-in.txt  06-chain-with-epsilon-in.txt  08-sort-order-in.txt  09-diamond-in.txt  10-self-loop-in.txt
grammar-simplifier/tests/chain-rule-eliminator-data/output/: 03-mixed-alternatives-out.txt  05-complex-rhs-out.txt  06-chain-with-epsilon-out.txt  07-no-chains-out.txt  08-sort-order-out.txt  09-diamond-out.txt  10-self-loop-out.txt
grammar-simplifier/tests/data/input/: 01-simple-removal-in.txt  04-multiple-occurrences-in.txt  05-mixed-symbols-in.txt  06-cyclic-in.txt  09-complex-manual-in.txt
grammar-simplifier/tests/data/output/: 08-recursive-out.txt  10-only-epsilon-out.txt
grammar-simplifier/tests/epsilon-eliminator-data/input/: 02-chain-nullability-in.txt  03-combinatorial-in.txt  07-no-epsilon-in.txt  08-recursive-in.txt  10-only-epsilon-in.txt
grammar-simplifier/tests/epsilon-eliminator-data/output/: 01-simple-removal-out.txt  02-chain-nullability-out.txt  03-combinatorial-out.txt  04-multiple-occurrences-out.txt  05-mixed-symbols-out.txt  06-cyclic-out.txt  09-complex-manual-out.txt
grammar-simplifier/tests/grammar-factorizer-data/input/: 01-simple-in.txt  02-epsilon-suffix-in.txt  03-nonterminal-prefix-in.txt  04-partial-in.txt  05-multiple-prefixes-in.txt  06-deep-factorization-in.txt  07-long-prefix-in.txt  08-sort-check-in.txt  09-full-rule-prefix-in.txt  10-complex-in.txt
grammar-simplifier/tests/grammar-factorizer-data/output/: 01-simple-out.txt  02-epsilon-suffix-out.txt  03-nonterminal-prefix-out.txt  04-partial-out.txt  05-multiple-prefixes-out.txt  06-deep-factorization-out.txt  07-long-prefix-out.txt  08-sort-check-out.txt  09-full-rule-prefix-out.txt  10-complex-out.txt
grammar-simplifier/tests/left-recursion-eliminator-data/input/: 02-multiple-immediate-in.txt  03-indirect-in.txt  05-long-alpha-beta-in.txt  06-mixed-indirect-in.txt  08-sort-check-in.txt  09-triple-indirect-in.txt  10-epsilon-recursive-in.txt
grammar-simplifier/tests/left-recursion-eliminator-data/output/: 01-simple-immediate-out.txt  02-multiple-immediate-out.txt  03-indirect-out.txt  04-no-recursion-out.txt  05-long-alpha-beta-out.txt  06-mixed-indirect-out.txt  07-arithmetic-out.txt  08-sort-check-out.txt  09-triple-indirect-out.txt  10-epsilon-recursive-out.txt
grammar-simplifier/tests/useless-symbol-eliminator-data/input/: 01-unreachable-in.txt  02-non-generating-in.txt  03-chain-non-generating-in.txt  06-recursive-generating-in.txt  07-complex-mix-in.txt  08-mutual-recursion-in.txt  10-all-dead-in.txt
grammar-simplifier/tests/useless-symbol-eliminator-data/output/: 02-non-generating-out.txt  03-chain-non-generating-out.txt  04-order-matters-out.txt  06-recursive-generating-out.txt  07-complex-mix-out.txt  08-mutual-recursion-out.txt  09-printer-rules-out.txt
guiding-set-provider/: CMakeLists.txt  GuidingSetProvider.cpp  GuidingSetProvider.h  main.cpp
guiding-set-provider/tests/: GuidingSetProviderTest.cpp
guiding-set-provider/tests/guiding-set-data/input/: 04-nullable-follow-in.txt  05-nullable-chain-in.txt  06-expression-in.txt  07-complex-follow-in.txt
guiding-set-provider/tests/guiding-set-data/output/: 01-basic-out.txt  02-choice-out.txt  03-epsilon-out.txt  04-nullable-follow-out.txt  06-expression-out.txt  (+2 more)
ll1-generator/: CMakeLists.txt  main.cpp  test-in.txt  test.txt
ll1-generator/runner/: LL1Runner.cpp  LL1Runner.h  ParseTreeNode.h
ll1-generator/table-processing/: AddressMap.cpp  AddressMap.h  CsvExporter.cpp  CsvExporter.h  TableGenerator.cpp  TableGenerator.h  TableRow.h
ll1-generator/test/: ex1.txt  ex2.txt  ex3.txt  ex4.txt
ll1-generator/test1/: ex5.txt  ex6.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
